# wisedash2sql

./: .gitignore  LICENSE  README.md  requirements-dev.txt  requirements.txt  setup.cfg
sphinx/source/: api.rst  conf.py  index.rst
sphinx/source/autosummary_templates/: base.rst  module.rst
src/wisedash2sql/: __init__.py  attendance_importer.py  column_data_type.py  column_type_declarations.py  csv_to_sqlite.py  pandas_excel_wrangling.py  wi_dpi_forward.py  wisedash_importer.py  zip_to_sqlite.py
src/wisedash2sql/importers/: __init__.py  attendance_importer.py  forward_importer.py  wisedash_importer.py
src/wisedash2sql/tables/: base_table.py  validators.py
src/wisedashtables/: district_table.py  validators.py
tests/: conftest.py  test_attendance_importer.py  test_forward_importer.py  test_wisedash_importer.py
tests/data/: attendance_example.csv  forward_example.csv
tests/importers/: test_attendance_importer.py  test_forward_importer.py  test_wisedash_importer.py
tests/tables/: test_validators.py
wisedash2sql/src/: column_type_declarations.py
wisedash2sqlite/src/: column_data_type.py  csv_to_sqlite.py  pandas_excel_wrangling.py  zip_to_sqlite.py
