[metadata]
name = wisedash2sql
version = 0.0.1
author = Ben Taft
author_email = ben.taft@career2cradle.org
description = Build an SQL database from WISEDash archive files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/higherX4Racine/wisedash2sql
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8


[options.packages.find]
where = src

[build_sphinx]
project = wisedash2sql
version = 0.0.1
release = 0.0.1
source-dir = sphinx/source
